# rest-model-rs

./: Cargo.toml  README.md  REST.md  rssi.json
example/: Cargo.toml
example/src/: main.rs
rest-model/: Cargo.toml
rest-model-macro/: Cargo.toml
rest-model-macro/src/: lib.rs
rest-model-postgres/: Cargo.toml
rest-model-postgres/src/: lib.rs  oid.rs  query.rs
rest-model-postgres/src/tests/: test.rs
rest-model/src/: db_client.rs  doc.rs  lib.rs  method.rs  pagination.rs  params.rs  response.rs  rest_model.rs
