[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
rest-model = { path = "../rest-model" }
rest-model-postgres = { path = "../rest-model-postgres" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }