[package]
name = "rest-model-macro"
version = "0.1.0"
edition = "2021"
authors = [ "kuyoonjo" ]
description = "macro for crate rest-model"
license = "MIT"
repository = "https://github.com/kuyoonjo/rest-model-rs.git"
keywords = ["rest", "model", "rest-model"]

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }

[lib]
proc-macro = true

# [[test]]
# name = "derive"
# path = "src/tests/derive.rs"

[dev-dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
