[package]
name = "rest-model-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
json-patch = "4.0.0"
anyhow = "1.0.89"
rest-model = { path = "../rest-model" }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
chrono = "0.4"
bson = "2.13.0"

[[test]]
name = "test"
path = "src/tests/test.rs"
