[package]
name = "rest-model-postgres"
version = "0.1.2"
edition = "2021"
authors = [ "kuyoonjo" ]
description = "db for crate rest-model"
license = "MIT"
repository = "https://github.com/kuyoonjo/rest-model-rs.git"
keywords = ["rest", "model", "rest-model", "postgres"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
anyhow = "1.0.89"
rest-model = "0.1.2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
chrono = "0.4"
hex = "0.4.3"
once_cell = "1.20.3"
rand = "0.9.0"
tracing = "0.1.41"

[[test]]
name = "test"
path = "src/tests/test.rs"
