[package]
name = "rest-model"
version = "0.1.2"
edition = "2021"
authors = [ "kuyoonjo" ]
description = "macro for crate rest-model"
license = "MIT"
repository = "https://github.com/kuyoonjo/rest-model-rs.git"
keywords = ["rest", "model", "rest-model"]
readme = "../README.md"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
anyhow = "1.0.89"
chrono = "0.4"
rest-model-macro = "0.1.2"
